--- a/docs/locales/en.json
+++ b/docs/locales/en.json
@@ -1,6 +1,6 @@
 {
   "landing": {
-    "title": "Elevate your project's design with our fully customizable Vue 3 component library, featuring over 30 components built on top of Tailwind CSS and own design system with dark and light themes",
+    "title": "Elevate your design with customizable Vue 3 component library, featuring over 30 components built on top of Tailwind CSS",
     "get_started": "Get started",
     "components": "COMPONENTS",
     "button": "Button",
