refactor: refactor: rename zh-CN.json to zh-hans.json and add zh-hant.json

--- a/docs/locales/zh-hans.json
+++ b/docs/locales/zh-hans.json
@@ -35,7 +35,7 @@
     "owntheme": {
       "title": "建立你自己的主题",
       "subtitle": "使用Equal UI的高级定制功能和Tailwind类定制你的用户界面",
-      "text": "每个组件都有多个变量，你可以在构建和运行时创建你自己的变量"
+      "text": "每个组件都有多个变体，你可以在构建和运行时创建你自己的变体"
     },
     "tag_text": "欢迎！"
   },
