--- a/docs/locales/zh.json
+++ b/docs/locales/zh.json
@@ -53,7 +53,7 @@
       "placeholder7": "按钮"
     },
     "introduction": "介绍",
-    "gettingstarted": "入门",
+    "getting_started": "入门",
     "theming": "主题",
     "contribution": "贡献",
     "support": "支持",
